k8s-manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lab5
  labels:
    name: lab5
    environment: learning
