k8s-manifests/backend-service.yaml.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: lab5
  labels:
    app: backend
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
  - name: http
    protocol: TCP
    port: 5000
    targetPort: 5000
